# sentence-similarity-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
src/: lib.rs  main.rs
