[package]
name = "sentence-similarity-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.60"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
